--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -13,6 +13,7 @@
   --color-theme-dark: #1A191C;
   --color-monire-teal: 0 59 75;
   --color-monire-nav: 26 54 60;
+  --color-monire-deep-teal: #0F4B5A;
   --color-light: #F8F5F1;
   --color-mustard: #CFA947;
 
