add bg gradient

--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -31,7 +31,9 @@ let actualContent = overrideObjects(
 let { title, subtitle, list } = actualContent as ourValueSectionType;
 ---
 
-<section class="section-light">
+<section
+  class="section-light"
+  style="background-image: var(--gradient-bg-light);">
   <div class="relative after:top-0">
     <div class="container space-y-16 md:space-y-28">
       {
