--- a/src/layouts/components/sections/CallToAction.astro
+++ b/src/layouts/components/sections/CallToAction.astro
@@ -38,7 +38,7 @@ let {
             data-aos-offset="0">
             {title && (
               <h2
-                class="has-italic-text capitalize"
+                class="section-title has-italic-text capitalize"
                 set:html={markdownify(title)}
               />
             )}
