--- a/src/layouts/components/sections/MeetTheDuo.astro
+++ b/src/layouts/components/sections/MeetTheDuo.astro
@@ -37,7 +37,7 @@ let { title, items } = actualContent as meetTheDuoSectionType;
   <div class="container mx-auto space-y-12 md:space-y-16">
     {
       title && (
-        <h2 class="text-3xl font-semibold capitalize">{markdownify(title)}</h2>
+        <h2 class="section-title font-semibold capitalize">{markdownify(title)}</h2>
       )
     }
 
