--- a/src/layouts/components/sections/OurValue.astro
+++ b/src/layouts/components/sections/OurValue.astro
@@ -41,7 +41,7 @@ let { title, subtitle, list } = actualContent as ourValueSectionType;
           <div class="mx-auto max-w-2xl text-center" data-aos="fade-up-sm">
             <Subtitle content={subtitle} />
             <h2
-              class="has-italic-text capitalize text-monire-deep-teal"
+              class="section-title has-italic-text text-monire-deep-teal"
               set:html={markdownify(title)}
             />
           </div>
