--- a/src/layouts/components/sections/PricingSection.astro
+++ b/src/layouts/components/sections/PricingSection.astro
@@ -37,7 +37,7 @@ const { title, subtitle, plans, list, heading, description, ai_automations } =
       {
         title && (
           <h2
-            class="has-italic-text capitalize"
+            class="section-title has-italic-text capitalize"
             set:html={markdownify(title)}
           />
         )
