--- a/src/layouts/components/sections/ServicesSection.astro
+++ b/src/layouts/components/sections/ServicesSection.astro
@@ -48,7 +48,7 @@ let { enable = true, title, subtitle, tabs = [] } = actualContent;
             <Subtitle content={subtitle} />
             {title && (
               <h2
-                class="has-italic-text text-white"
+                class="section-title has-italic-text text-white"
                 set:html={markdownify(title)}
               />
             )}
