--- a/src/layouts/components/sections/About.astro
+++ b/src/layouts/components/sections/About.astro
@@ -53,7 +53,7 @@ const isModernLayout = layoutType === "modern";
           <Subtitle content={subtitle} />
           {title && (
             <h2
-              class="has-italic-text capitalize"
+              class="section-title has-italic-text capitalize"
               set:html={markdownify(title)}
             />
           )}
