--- a/src/layouts/components/sections/ContactSection.astro
+++ b/src/layouts/components/sections/ContactSection.astro
@@ -123,7 +123,7 @@ form = {
             <Subtitle class="ml-0" content={subtitle} />
             {title && (
               <h2
-                class="h2 has-italic-text capitalize"
+                class="section-title has-italic-text capitalize"
                 set:html={markdownify(title)}
               />
             )}
